# gcp-flask-ml-deploy

./: README.md  cloudbuild.yaml  main.py  pyproject.toml
