[tool.poetry]
name = "gcp-flask-ml-deploy"
version = "0.1.0"
description = "Demo Flask app deployed with GCP."
authors = ["Mitch Edmunds"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.14.3"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
